src/main/java/com/example/springforumapp/errors/ApiStatus.java
package com.example.springforumapp.errors;

public enum ApiStatus {
    SUCCESS,
    FAIL
}
